Fix listings 2-column layout issue

--- a/app/assets/stylesheets/reusables/base.scss
+++ b/app/assets/stylesheets/reusables/base.scss
@@ -10,7 +10,7 @@ $key-color: #FFC36E;
 }
 
 @mixin inner-block() {
-  display: block;
+  //display: block;
   max-width: $measure;
   margin: auto;
 }
